[gd_scene load_steps=9 format=3 uid="uid://bkd1il7gun27t"]

[ext_resource type="Script" uid="uid://2a2dwm20a5ch" path="res://scenes/parrot/parrot.gd" id="1_h4ksm"]
[ext_resource type="Texture2D" uid="uid://c7b06emn4wqt4" path="res://images/parrot.png" id="2_r8s7u"]
[ext_resource type="AudioStream" uid="uid://ckh0nfi1xhf5i" path="res://audio/sfx/macaw-sound-382721.mp3" id="3_3mqut"]
[ext_resource type="Script" uid="uid://cxulcgnbpnd8b" path="res://scenes/parrot/audio.gd" id="3_ajnbt"]
[ext_resource type="Texture2D" uid="uid://7bt1obpd6jci" path="res://images/parrot_2.png" id="3_v0cip"]
[ext_resource type="AudioStream" uid="uid://bwr220q2dutop" path="res://audio/sfx/tick-sound-effect-1-336779.mp3" id="5_r8s7u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5hmjh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r8s7u")
}, {
"duration": 1.0,
"texture": ExtResource("3_v0cip")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oysvk"]
size = Vector2(134, 124)

[node name="Parrot" type="CharacterBody2D" groups=["Body"]]
collision_layer = 4
collision_mask = 23
script = ExtResource("1_h4ksm")

[node name="ParrotImg" type="AnimatedSprite2D" parent="."]
position = Vector2(812, 74)
scale = Vector2(0.715, 0.5)
sprite_frames = SubResource("SpriteFrames_5hmjh")
autoplay = "default"
frame_progress = 0.245824

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(816, 77)
shape = SubResource("RectangleShape2D_oysvk")

[node name="Timers" type="Node" parent="."]

[node name="TimeLeft" type="Timer" parent="Timers"]
wait_time = 120.0
one_shot = true
autostart = true

[node name="Tick" type="Timer" parent="Timers"]
autostart = true

[node name="HighTick" type="Timer" parent="Timers"]
one_shot = true

[node name="TimerUI" type="Node2D" parent="."]

[node name="TimeBar" type="ProgressBar" parent="TimerUI"]
modulate = Color(0, 0, 1, 1)
offset_left = 734.0
offset_top = -25.0
offset_right = 905.0
offset_bottom = 2.0
value = 10.0
show_percentage = false

[node name="SecondsLeft" type="RichTextLabel" parent="TimerUI"]
offset_left = 787.0
offset_top = -26.0
offset_right = 870.0
offset_bottom = -1.0
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="HealthUI" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="HealthUI"]
modulate = Color(1, 0, 0, 1)
offset_left = 735.0
offset_top = -53.0
offset_right = 906.0
offset_bottom = -26.0
show_percentage = false

[node name="HealthNumber" type="RichTextLabel" parent="HealthUI"]
offset_left = 745.0
offset_top = -58.0
offset_right = 902.0
offset_bottom = -18.0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="Node" parent="."]
script = ExtResource("3_ajnbt")

[node name="HitSfx" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_3mqut")
pitch_scale = 0.75
bus = &"SFX"

[node name="TickSfx" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_r8s7u")
volume_db = -10.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="timeout" from="Timers/TimeLeft" to="." method="_on_time_left_timeout"]
[connection signal="timeout" from="Timers/Tick" to="." method="_on_tick_timeout"]
[connection signal="timeout" from="Timers/HighTick" to="." method="_on_high_tick_timeout"]
